--- a/SRteacher/RP-skill-portfolio.html
+++ b/SRteacher/RP-skill-portfolio.html
@@ -25,6 +25,7 @@
 <body data-sidebar="RP-skill-portfolio">
 <form>
   <header> </header>
+	
   <div class="container-fluid">
     <div class="row">
       <nav id="sidebarMenu" class="col-xl-2 d-xl-block bg-white sidebar collapse"> </nav>
@@ -46,8 +47,6 @@
                         <select class="form-select rounded-0 form-select-sm form-select-arrow-sm" id="searchYear">
                           <option value="" disabled selected>請選擇...</option>
                           <option value="2024">2024</option>
-                          <option value="2023">2023</option>
-                          <option value="2022">2022</option>
                         </select>
                       </div>
                     </div>
@@ -61,8 +60,6 @@
                         <select class="form-select rounded-0 form-select-sm form-select-arrow-sm" id="searchGrade">
                           <option value="" disabled selected>請選擇...</option>
                           <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">5</option>
                         </select>
                       </div>
                     </div>
@@ -75,9 +72,8 @@
                       <div class="col-auto">
                         <select class="form-select rounded-0 form-select-sm form-select-arrow-sm" id="searchClass">
                           <option value="" disabled selected>請選擇...</option>
-                          <option value="3">3</option>
+                          <option value="2">2</option>
                           <option value="4">4</option>
-                          <option value="5">5</option>
                         </select>
                       </div>
                     </div>
@@ -186,6 +182,10 @@
 <script>
 $(document).ready(function () {
   const $table = $('#portfolioTable');
+	
+	//清空 html
+  $table.find('tbody').remove();
+	
   //班級 datatables 
   $table.DataTable({
     //serverSide: true,     // 開啟伺服端模式
@@ -201,8 +201,9 @@ $(document).ready(function () {
     language: {
       url: 'Content/widgets/DataTables/lang/Chinese-traditional.json'
     },
-    ajax: 'Content/json/RP-skill/portfolio.json',
-    columnDefs: [{ //序號
+    //ajax: 'Content/json/RP-skill/portfolio.json',
+    columnDefs: [
+			{ //序號
         targets: 0,
         title: '序號',
         className: 'col-index',
@@ -301,7 +302,25 @@ $(document).ready(function () {
         render: function (data, type, row, meta) {
           return `<button type="button" class="btn btn-outline-primary bg-gradient">查看</button>`;
         }
-      }
+      },
+			{ // 年度 隱藏但可搜尋
+				targets: 11,
+				data: 'year', 
+				name: 'year', 
+				visible: false 
+			},
+			{ // 年級 隱藏但可搜尋
+				targets: 12,
+				data: 'grade', 
+				name: 'grade', 
+				visible: false 
+			},
+			{ // 班級 隱藏但可搜尋
+				targets: 13,
+				data: 'class', 
+				name: 'class', 
+				visible: false 
+			},
 
     ],
     initComplete: function () {
@@ -309,6 +328,34 @@ $(document).ready(function () {
       datatableInputPage($table);
     }
   });
+	
+	//下拉 年度、年級、班級，三個都選才搜尋
+	$('#searchYear, #searchGrade, #searchClass').on('change', function () {
+		const year = $('#searchYear').val();
+		const grade = $('#searchGrade').val();
+		const className = $('#searchClass').val();
+
+		const table = $table.DataTable();
+
+    // 三個都有值才顯示資料
+		if (year && grade && className) {
+
+			table.ajax.url('Content/json/RP-skill/portfolio.json').load(function () {
+
+				table
+					.column('year:name').search(year)
+					.column('grade:name').search(grade)
+					.column('class:name').search(className)
+					.draw();
+
+			});
+
+		} else {
+			// 任一沒選 → 清空
+			table.clear().draw();
+		}
+	});
+
 
   //[查看](學習歷程檔案)
   $table.on('click', '.col-portfolio button', function () {
